webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-dashboard.scss
.content-wrapper,
.content-wrapper > .rudder_col,
.rudder-template,
.rudder-template .homePage{
  height: 100%;
}
.content-wrapper > .rudder_col .row{
  height: auto;
}
.rudder-template .homePage {
  display: flex;
  flex-direction : column;
  padding: 30px;
  width: 100%;
  overflow: auto;
}

/* === PANEL === */

.rudder-template .homePage .panel,
.rudder-template .homePage .card{
  margin-bottom: 30px;
  border-radius: 12px;
  box-shadow: 0 10px 20px 6px #dce3ef63;
  border: none !important;
  overflow: hidden;
}
.rudder-template .homePage .panel-default > .panel-heading {
  border: none;
  margin: 0;
  font-weight: 600;
  color: #041922;
  background-color:transparent;
}

#globalComplianceStats {
  color: #36474E;
  padding: 0 30px;
}

.highlight{
  color: #041922;
  font-weight:700;
}
.node-chart h4 {
  color: #36474E;
  margin-bottom: 15px;
  font-size: 1.3em;
}
/* Statistics */
.stats li {
  &:hover{
    background-color: #f2f8fe;
  }
  & > a {
    .badge{
      background-color: #b1bbcb;
      opacity:.5;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      padding: 5px 10px;
      font-size: .8em;
    }

    &:hover {
      & .badge{
         background-color: #72829D;
         opacity:1;
       }
    }
  }
}

/* Global Compliance */
.global-compliance,.global-compliance-details {
  height: 279px;
}
#globalCompliance .progress {
  height: 80px;
  border-radius: 8px;
}

#globalCompliance .progress .progress-bar {
  font-size: 16px;
  min-width: 8px;
}

#complianceGauge {
  max-width: 100%;
  width:420px;
}
#gauge-value {
  font-weight: bold;
  font-size:30px;
  float: left;
  width: 100%;
  color: #36474E;
}
.node-compliance-chart{
  padding: 15px;
}
.graph-legend{
  margin-bottom: 0;
  margin-top: 15px;
}

.placeholder.progress{
  background: repeating-linear-gradient(
    135deg,
    #eef1f8,
    #eef1f8 10px,
    #f8f9fc 10px,
    #f8f9fc 20px
  );
  box-shadow: inset 0 0 2px rgb(0 0 0 / 10%);
}

/* Node Breakdown */
.node-charts {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  padding: 15px;
}
.node-charts .node-chart{
  width: 30%;
}
@media (max-width: 768px){
  .node-charts .node-chart{
    width: 100%;
  }
}

.node-charts .node-chart canvas{
  width : 224px !important;
  height: 224px !important;
  margin: auto;
}
#nodeCompliance,
.placeholder-doughnut-chart{
  width : 290px !important;
  height: 290px !important;
  margin: auto;
  display: block;
}

.placeholder-doughnut-chart{
  border-radius: 50%;
  background: repeating-linear-gradient(
    135deg,
    #eef1f8,
    #eef1f8 10px,
    #f8f9fc 10px,
    #f8f9fc 20px
  );
  display: flex;
  justify-content: center;
  align-items: center;
}
.placeholder-doughnut-chart:before{
  content: "";
  width: 150px;
  height: 150px;
  background-color: #fff;
  border-radius: 50%;
}

ul.graph-legend{
  width: 224px;
  max-width: 100%;
  margin: 15px auto 0px auto;
}
#nodeOverview {
  min-height: 382px;
}
#nodeOverview ul.graph-legend{
  width: 290px;
}
ul.graph-legend > li.legend{
  background-color:transparent;
  transition-property:background-color;
  transition-duration:.2s;
  cursor:pointer;
  border-radius:4px;
  display: flex;
  align-items: flex-end;
  color: #36474E;
}
ul.graph-legend > li.legend:hover{
  background-color: #F8F9FC;
  color: #041922;
}

